network-security-group/04-nsg-for-each-with-map/main.tf

resource "azurerm_network_security_group" "nsg" {
  for_each            = var.nsgs
  name                = each.value
  location            = var.location
  resource_group_name = var.rg_name

  security_rule {

    name                       = "Allow-SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"

  }

  security_rule {

    name                       = "Allow-HTTP"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"

  }

}
